--- a/ITUniver.Calc.WinFormApp/ITUniver.Calc.WinFormApp.csproj
+++ b/ITUniver.Calc.WinFormApp/ITUniver.Calc.WinFormApp.csproj
@@ -80,7 +80,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ITUniver.Calc.Core\ITUniver.Calc.Core.csproj">
+    <ProjectReference Include="..\ITUniver.Calc.Core\ITUniver.Calc.Core.csproj">
       <Project>{b6f25292-f0b6-4d84-92e2-683140ede8a4}</Project>
       <Name>ITUniver.Calc.Core</Name>
     </ProjectReference>
