--- a/ITUniver.Calc.WinFormApp/ITUniver.Calc.WinFormApp.csproj
+++ b/ITUniver.Calc.WinFormApp/ITUniver.Calc.WinFormApp.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{653289B9-0B26-4E07-A906-25A297A62C3A}</ProjectGuid>
+    <ProjectGuid>{75832E1E-A04A-4DFD-AB22-9555FAD4612B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsFormsApplication1</RootNamespace>
-    <AssemblyName>WindowsFormsApplication1</AssemblyName>
+    <RootNamespace>ITUniver.Calc.WinFormApp</RootNamespace>
+    <AssemblyName>ITUniver.Calc.WinFormApp</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -52,6 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -81,8 +82,12 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ITUniver.Calc.Core\ITUniver.Calc.Core.csproj">
-      <Project>{bc51b73b-9860-4482-b41a-11c013af249e}</Project>
+      <Project>{b6f25292-f0b6-4d84-92e2-683140ede8a4}</Project>
       <Name>ITUniver.Calc.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ITUniver.Calc.DB\ITUniver.Calc.DB.csproj">
+      <Project>{EA765E13-6DFF-461D-B906-EC0A4BCEB654}</Project>
+      <Name>ITUniver.Calc.DB</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
